<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="action_app_spotify">Spotify Streamer</string>
    <string name="action_app_scores">Scores App</string>
    <string name="action_app_library">Library App</string>
    <string name="action_app_Build_It">Build It Bigger</string>
    <string name="action_app_XYZ">XYZ Reader</string>
    <string name="action_app_Capstone">Capstone: My Own App</string>
</resources>
