<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.mkd.project0myappportfolio.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/txt_margin_top"
        android:layout_marginBottom="@dimen/txt_margin_bottom"
        android:layout_gravity="center"
        android:text="@string/app_name"
        android:textSize="@dimen/activity_text_size"/>

    <Button
        android:id="@+id/bt_spotify"
        android:layout_width="@dimen/activity_button_width"
        android:layout_marginTop="@dimen/button_margin_top"
        android:layout_marginBottom="@dimen/button_margin_bottom"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/colorButtonGreenWhite"
        android:text="@string/action_app_spotify"/>

    <Button
        android:id="@+id/bt_scores"
        android:layout_width="@dimen/activity_button_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/button_margin_top"
        android:layout_marginBottom="@dimen/button_margin_bottom"
        android:textColor="@color/colorButtonGreenWhite"
        android:text="@string/action_app_scores"/>

    <Button
        android:id="@+id/bt_library"
        android:layout_width="@dimen/activity_button_width"
        android:layout_marginTop="@dimen/button_margin_top"
        android:layout_marginBottom="@dimen/button_margin_bottom"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/colorButtonGreenWhite"
        android:text="@string/action_app_library"/>

    <Button
        android:id="@+id/buildIt"
        android:layout_width="@dimen/activity_button_width"
        android:layout_marginTop="@dimen/button_margin_top"
        android:layout_marginBottom="@dimen/button_margin_bottom"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/colorButtonGreenWhite"
        android:text="@string/action_app_Build_It"/>

    <Button
        android:id="@+id/xyz"
        android:layout_width="@dimen/activity_button_width"
        android:layout_marginTop="@dimen/button_margin_top"
        android:layout_marginBottom="@dimen/button_margin_bottom"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/colorButtonGreenWhite"
        android:text="@string/action_app_XYZ"/>

    <Button
        android:id="@+id/capStone"
        android:layout_width="@dimen/activity_button_width"
        android:layout_marginTop="@dimen/button_margin_top"
        android:layout_marginBottom="@dimen/button_margin_bottom"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/colorUdacityWhite"
        android:text="@string/action_app_Capstone"/>

</LinearLayout>
